Fix wordwrap issue

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -171,6 +171,7 @@ section {
   #header {
     @apply p-4;
     height: 8rem;
+    word-break: break-all;
     .title {
       @apply text-2xl h-full;
     }
